# catchtest

./: .catchtest.yaml  .gitignore  README.md  pyproject.toml
catchtest/: __init__.py  cli.py  config.py  llm.py
catchtest/assess/: aggregator.py  llm_judge.py  rule_based.py
catchtest/core/: diff_extractor.py  test_generator.py  test_runner.py  weak_catch.py
catchtest/output/: reporter.py
catchtest/prompts/: generate.py  intent.py  judge.py
catchtest/telemetry/: formatter.py  reader.py
catchtest/utils/: git.py  sandbox.py
tests/: test_diff_extractor.py  test_generator.py  test_rule_based.py
